syntax = "proto3";

package product;
import "google/protobuf/empty.proto";

service ProductService {
  // Product
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse) {}
  rpc FindById(FindByIdRequest) returns (FindByIdResponse) {}
  rpc FindMany(FindManyRequest) returns (FindManyResponse) {}
  rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse) {}
  rpc DecreaseStock(DecreaseStockRequest) returns (DecreaseStockResponse) {}
  rpc ActivateProduct(ActivateProductRequest) returns (ActivateProductResponse) {}
  rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse) {}

  // Category
  rpc CreateCategory(CreateCategoryRequest) returns (CreateCategoryResponse) {}
  rpc FindAllCategories(google.protobuf.Empty) returns (FindAllCategoriesResponse) {}
}

message ImageData {
  string id = 1;
  string url = 2;
  bool isPrimary = 3;
}

message CategoryData {
  string id = 1;
  string name = 2;
  string slug = 3;
}

message ProductData {
  string id = 1;
  string name = 2;
  string sku = 3;
  int32 stock = 4;
  double price = 5;
  string description = 6;
  bool active = 7;
  repeated CategoryData categories = 8;
  repeated ImageData images = 9;
  string createdAt = 10;
  string updatedAt = 11;
}

// CreateProduct
message CreateProductRequest {
  string name = 1;
  string sku = 2;
  int32 stock = 3;
  double price = 4;
  string description = 5;
  repeated string categoryIds = 6;  
  repeated string imageUrls = 7; 
}

message CreateProductResponse {
  int32 status = 1;
  repeated string error = 2;
  ProductData data = 3;
}

// FindOne
message FindByIdRequest {
  string id = 1;
}

message FindByIdResponse {
  string status = 1;
  repeated string error = 2;
  ProductData data = 3;
}

// Pagination
message PaginationRequest {
  int32 page = 1;
  int32 perPage = 2;
}

message PaginationResponse {
  int32 totalItems = 1;
  int32 totalPages = 2;
  int32 currentPage = 3;
  int32 perPage = 4;
  bool next = 5;
  bool prev = 6;
}


// FindMany
message FindManyRequest {
  PaginationRequest pagination = 1;
  string shopId = 2;
  string categoryId = 3;
  string search_term = 4;
}

message FindManyResponse {
  int32 status = 1;
  repeated string error = 2;
  repeated ProductData data = 3;
  PaginationResponse pagination = 4;

}

// UpdateProduct
message UpdateProductRequest {
  string id = 1;
  string name = 2;
  double price = 3;
  string description = 4;
  repeated string categoryIds = 5;  
  repeated string imageUrls = 6;   
}

message UpdateProductResponse {
  int32 status = 1;
  repeated string error = 2;
  ProductData data = 3;
}


// DecreaseStock
message DecreaseStockRequest {
  string id = 1;
  int32 quantity = 2;
}

message DecreaseStockResponse {
  int32 status = 1;
  repeated string error = 2;
}

// ActivateProduct
message ActivateProductRequest {
  string id = 1;
}

message ActivateProductResponse {
  int32 status = 1;
  repeated string error = 2;
}

// DeleteProduct
message DeleteProductRequest {
  string id = 1;
}

message DeleteProductResponse {
  int32 status = 1;
  repeated string error = 2;
}

// Category
message CreateCategoryRequest {
  string name = 1;
}

message CreateCategoryResponse {
  int32 status = 1;
  repeated string error = 2;
  CategoryData data = 3;
}

message FindAllCategoriesResponse {
  int32 status = 1;
  repeated string error = 2;
  repeated CategoryData data = 3;
}

