syntax = "proto3";

package user;
import "google/protobuf/empty.proto";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  rpc FindOne(FindOneRequest) returns (FindOneResponse) {}
  rpc FindAll(google.protobuf.Empty) returns (FindAllResponse) {}
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
}

enum ErrorCode {
  OK = 0;

  USER_NOT_FOUND = 200100;
  USER_ALREADY_EXISTS = 200101;
  INVALID_USER_DATA = 200102;
  USER_DELETED = 200103;
  USER_INACTIVE = 200104;
  USER_SUSPENDED = 200105;
  USER_BLOCKED = 200106;
}

message Error {
  ErrorCode code = 1;
  string message = 2;
}

message Address {
  string street = 1;
  string city = 2;
  string state = 3;
  string postalCode = 4;
  string country = 5;
  bool isDefault = 6;
}

message UserData {
  string id = 1;
  string email = 2;
  string firstName = 3;
  string lastName = 4;
  string phoneNumber = 5;
  string gender = 6;
  string avatar = 7;
  repeated Address addresses = 8;
  string password = 9;
  string role = 10;
}


// CreateUser
message CreateUserRequest {
  string email = 1;
  string password = 2;
  string firstName = 3;
  string lastName = 4;
  string gender = 5;
  string role = 6;
}

message CreateUserResponse {
  Error error = 1;
  string id = 2;
}

// FindOne
message FindOneRequest {
  oneof search_option {
    string id = 1;
    string email = 2;
  }
}

message FindOneResponse {
  Error error = 1;
  UserData data = 2;
}

// FindAll
message FindAllResponse {
  Error error = 1;
  repeated UserData data = 2;
}

// Update user
message UpdateUserRequest {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  string phoneNumber = 4;
  string avatar = 5;
}

message UpdateUserResponse {
  Error error = 1;
}

// Delete user
message DeleteUserRequest {
  string id = 1;
}

message DeleteUserResponse {
  Error error = 1;
}